[project]
name = "fastapi-ca"
version = "0.1.0"
description = ""
authors = [
    {name = "LimdaeIl",email = "optional94@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "py-ulid (>=1.0.3,<2.0.0)",
    "passlib[bcrypt] (==1.7.4)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "mysqlclient (>=2.2.8,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "dependency-injector (>=4.48.3,<5.0.0)",
    "bcrypt (==4.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
